feat: Add Tailwind styling instead of bootstrap (#1)
* feat: Add tailwind configuration and npm build script
* feat: Replace Bootstrap with Tailwind CSS.

As a first step, Bootstrap 3.3.6 has been replaced entirely with Tailwind styles. Against best practice recommendations, the `form-control` class has been preserved by adding `@apply` styles. The layout has been updated to be a tab layout, so each input has more space. The styling of the error message has been updated as well.

* feat: Move the error message to the top of the page, update the error messages

--- a/src/index.html
+++ b/src/index.html
@@ -3,68 +3,64 @@
     <head>
         <meta charset="utf-8" />
         <title>Shamir Secret Sharing Scheme</title>
-        <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/app.css">
         <meta content="Shamir Secret Sharing Scheme tool" name="description"/>
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
         <meta content="Ian Coleman" name="author" />
     </head>
-    <body>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12">
-                    <h1>Shamir Secret Sharing Scheme</h1>
-                    <p>Split your secret into parts which can be combined back into the original secret using some or all of the parts.</p>
+    <body class="font-sans text-[#333]">
+        <div class="container px-12 my-4">
+            <div class="-mx-3 flex mb-3">
+                <div class="px-5">
+                    <h1 class="text-4xl mb-3">Shamir Secret Sharing Scheme</h1>
+                    <p class="mb-0">Split your secret into parts which can be combined back into the original secret using some or all of the parts.</p>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-6">
-                    <h2>Split</h2>
-                    <div>
-                        Require
-                        <input class="required form-control" type="number" value="3" min="2" max="255">
-                        parts from
-                        <input class="total form-control" type="number" value="5" min="2" max="255">
-                        to reconstruct the following secret
-                    </div>
-                    <textarea class="secret form-control" rows=10 placeholder="Enter your secret here"></textarea>
-                    <h2>Usage</h2>
-                    <p>Double click each part below to select the content for that part. Copy and paste the content for each part into <span class="distributesize">5</span> individual files on your computer.</p>
-                    <p>Distribute one file to each person in your group.</p>
-                    <p>If <span class="recreatesize">3</span> of those people can combine the contents of their file using this page, they can view the secret.</p>
-                    <p>Remember to delete the parts from your computer once you're finished. If you use a rubbish bin for deleted files, also remove them from the rubbish bin.</p>
-                    <p class="error text-danger"></p>
-                    <h2>Parts</h2>
-                    <ol class="generated">
-                        <li>Enter your secret above.</li>
-                    </ol>
+            <p id="error-message" class="text-red-700 my-3 w-full p-3 bg-red-100 rounded-lg hidden border-red-200 border"></p>
+            <div class="w-full flex gap-2 border-b border-zinc-200 border-solid border-0">
+                <div id="split-secret-tab" role="tab" class="px-2 leading-8 mb-1 text-sm font-semibold cursor-pointer hover:bg-zinc-100 rounded-lg relative active-tab">Split Secret</div>
+                <div id="combine-secret-tab" role="tab" class="px-2 leading-8 mb-1 text-sm cursor-pointer hover:bg-zinc-100 rounded-lg relative">Combine Secret</div>
+            </div>
+            <div id="split-secret" class="w-full my-4">
+                <!-- <h2>Split</h2> -->
+                <div class="mb-2">
+                    Require
+                    <input id="required-parts" class="form-control" type="number" value="3" min="2" max="255">
+                    parts from
+                    <input id="total-parts" class="form-control" type="number" value="5" min="2" max="255">
+                    to reconstruct the following secret:
                 </div>
-                <div class="col-sm-6">
-                    <h2>Combine</h2>
-                    <p class="form-control-static">
-                        Enter the secrets, one per line
-                    </p>
-                    <textarea class="parts form-control" rows=10></textarea>
-                    <h2>Result</h2>
-                    <pre class="combined">Enter your parts above.</pre>
-                </div>
+                <textarea id="secret" class="form-control mb-3" rows=10 placeholder="Enter your secret here"></textarea>
+                <h2 class="text-3xl mb-3">Usage</h2>
+                <p class="mb-1">Double click each part below to select the content for that part. Copy and paste the content for each part into <span id="distributesize">5</span> individual files on your computer.</p>
+                <p class="mb-1">Distribute one file to each person in your group.</p>
+                <p class="mb-1">If <span id="recreatesize">3</span> of those people can combine the contents of their file using this page, they can view the secret.</p>
+                <p class="mb-3">Remember to delete the parts from your computer once you're finished. If you use a rubbish bin for deleted files, also remove them from the rubbish bin.</p>
+                <h2 class="text-3xl my-3">Parts</h2>
+                <ol id="generated" class="max-w-full break-words rounded-lg overflow-hidden">
+                    <li>Enter your secret above.</li>
+                </ol>
+            </div>
+            <div id="combine-secret" class="hidden w-full my-4">
+                <!-- <h2>Combine</h2> -->
+                <p class="my-2 mb-2">
+                    Enter the secrets, one per line
+                </p>
+                <textarea id="parts" class="form-control mb-3" rows=10></textarea>
+                <h2 class="text-3xl mb-3">Result</h2>
+                <p id="combined">Enter your parts above.</p>
             </div>
             <hr>
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="sources">
-                        <h2>Sources</h2>
-                        <p><a href="https://en.wikipedia.org/wiki/Shamir%27s_Secret_Sharing">Wikipedia entry</a> for shamir secret sharing scheme.</p>
-                        <p>This project is 100% open-source code.</p>
-                        <p><a href="https://github.com/iancoleman/shamir">Project source code</a></p>
-                        <p><a href="https://github.com/grempe/secrets.js">SSSS javascript library by amper5and and Glenn Rempe</a></p>
-                        <p><a href="https://getbootstrap.com/">Bootstrap stylesheet</a></p>
-                        <h2>Offline Usage</h2>
-                        <p>This tool has been designed to be used offline.</p>
-                        <p>In your browser, select file save-as, and save this page as a file.</p>
-                        <p>Double-click that file to open it in a browser on any offline computer.</p>
-                    </div>
-                </div>
+            <div class="mt-4">
+                <h2 class="text-3xl mb-2">Sources</h2>
+                <p class="mb-1"><a href="https://en.wikipedia.org/wiki/Shamir%27s_Secret_Sharing" class="text-sky-600 underline hover:text-sky-800">Wikipedia entry</a> for shamir secret sharing scheme.</p>
+                <p class="mb-1">This project is 100% open-source. <a href="https://github.com/iancoleman/shamir" class="text-sky-600 underline hover:text-sky-800">View the project source code on GitHub</a></p>
+                <p class="mb-1"><a href="https://github.com/grempe/secrets.js" class="text-sky-600 underline hover:text-sky-800">Built with the SSSS javascript library by amper5and and Glenn Rempe</a></p>
+                <p><a href="https://tailwindcss.com/" class="text-sky-600 underline hover:text-sky-800">Styled with Tailwind</a></p>
+                <h2 class="text-3xl mb-2 mt-4">Offline Usage</h2>
+                <p class="mb-1">This tool has been designed to be used offline.</p>
+                <p class="mb-1">In your browser, select file save-as, and save this page as a file.</p>
+                <p>Double-click that file to open it in a browser on any offline computer.</p>
             </div>
         </div>
         <script src="js/secrets.js"></script>
